search vocabulary implimented

--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
         <div id="lebel-container" class="flex flex-wrap justify-center gap-1.5 md:gap-5 mt-4">
             
         </div>
+
+        <div class="join flex justify-center items-center my-4">
+            <div>
+                <label class="input validator join-item">
+                    <input 
+                        id="input-search" 
+                        type="text" 
+                        placeholder="Search for Vocabulary" 
+                        required />
+                </label>
+                <!-- <div class="validator-hint hidden">Enter valid email address</div> -->
+            </div>
+            <button id="btn-search" class="btn btn-primary join-item">Search</button>
+        </div>
+
     </section>
     <section class="flex justify-center items-center m-2 hidden" id="spinner">
         <span class="loading loading-bars loading-xl "></span>
